Revert "Upgrade to Java 11"
This reverts commit 64ca9482